# pulumi-extra

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  Makefile  README.md  flake.nix  mkdocs.yaml  pyproject.toml  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer.example/: devcontainer.json  docker-compose.devcontainer.yaml  onCreateCommand.sh
.github/workflows/: ci.yaml  docs.yaml  prepare-release.yaml  release.yaml
docs/: index.md
main/: 404.html  index.html
main/api-references/: index.html
main/api-references/contrib/aws/: index.html
main/api-references/contrib/gcp/: index.html
main/search/: search_index.json
pulumi_extra/: __init__.py  cli.py  errors.py  provider.py  pulumi-plugin.json  resource_.py  shortcuts.py  stack_reference.py  template.py  transform.py
pulumi_extra/contrib/aws/: autotag.py  common.py
pulumi_extra/contrib/aws/policies/: require_description.py  require_tags.py
pulumi_extra/contrib/gcp/: autolabel.py  common.py
pulumi_extra/contrib/gcp/policies/: require_description.py  require_labels.py
pulumi_extra/transforms/: invoke.py  resource_.py
tests/: conftest.py  test_output.py  test_resource_.py  test_stack_reference.py
tests/transforms/: test_invoke.py  test_resource_.py
v0.1.4/: 404.html  index.html
v0.1.4/api-references/: index.html
v0.1.4/api-references/contrib/aws/: index.html
v0.1.4/api-references/contrib/gcp/: index.html
v0.1.6/api-references/: index.html
v0.1.6/api-references/contrib/aws/: index.html
v0.1.6/api-references/contrib/gcp/: index.html
v0.1.6/search/: search_index.json
v0.2.0/: index.html
v0.2.0/api-references/: index.html
v0.2.0/search/: search_index.json
v0.3.0/: index.html
v0.3.0/api-references/: index.html
v0.3.0/api-references/contrib/gcp/: index.html
v0.3.2/: 404.html  index.html  objects.inv
v0.3.2/api-references/contrib/gcp/: index.html
v0.3.2/search/: search_index.json
