[project]
name = "pulumi-extra"
description = "Extra Pulumi utilities and resources for the Python runtime."
version = "0.3.2"
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10, <4.0"
dependencies = ["braceexpand>=0.1.7,<1", "jinja2>=3,<4", "pulumi>=3,<4"]

[project.optional-dependencies]
policy = ["pulumi-policy>=1,<2"]
aws = ["pulumi-aws>=6"]
gcp = ["pulumi-gcp>=8"]

[dependency-groups]
dev = [
  "mike==2.2.0",
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.6",
  "mkdocstrings[python]==1.0.4",
  "mypy==2.1.0",
  "ruff==0.15.17",
  "coverage==7.14.1",
  "pytest-cov>=7,<8",
  "pytest-sugar==1.1.1",
  "pytest==9.1.0",
  "nox==2026.4.10",
  "pulumi-random==4.21.0",
  "pulumi-docker==5.0.0",
]

[project.urls]
Homepage = "https://github.com/lasuillard-s/pulumi-extra"
Repository = "https://github.com/lasuillard-s/pulumi-extra.git"
Issues = "https://github.com/lasuillard-s/pulumi-extra/issues"
Documentation = "https://lasuillard-s.github.io/pulumi-extra/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pulumi_extra"]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
  "ANN401",
  "COM812", # Formatting conflict
  "D105",
  "FIX002",
  "TD003",
]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = [
  "COM812",  # Formatting conflict
  "D",
  "N801",
  "PLR2004",
  "S101",
  "SLF001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ['^\.venv/*']
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--cov",
  "--cov-report=term",
  "--cov-report=xml",
  "--show-capture=no",
  "--junitxml=junit.xml",
  "-rs",
]
testpaths = ["tests"]
markers = ["integration: mark a test as an integration test"]

[tool.coverage.run]
include = ["pulumi_extra/*"]
omit = ["*tests*"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
